k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debateland
spec:
  selector:
    app: debateland
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
