k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debateland-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  rules:
  - host: debateland.k8s.djnd.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: debateland
            port:
              number: 80
